# ShuffleProduct

./: .gitignore  .gitignore.txt  LICENSE  __init__.py  duffing_impulse.py  pyproject.toml  requirements.txt  setup.py  shuffle.py  shuffle_laplace_borel_tests.py
examples/: __init__.py  calculating_impulse.py  duffing_impulse.py  equating_terms.py  functional_expansions_paper.py  impulse_gses.py  impulse_response_paper.py  paper0_impulse_response.py  paper2_impulse_response.py  paper2_step_response.py  paper5_gwn.py  paper6_duffing_shufflw.py  params.py  quad_cube_y1_gen_num.npy  quad_cube_y1_gen_sym.txt  quad_cube_y2_gen_num.npy  quad_cube_y2_gen_sym.txt  quad_cube_y3_gen_num.npy  quad_cube_y3_gen_sym.txt  quad_cube_y3_k2_only_gen_num.npy  quad_cube_y3_k3_only_gen_num.npy  quadratic_oscillator.py  rk_quad_cube.py  rungekutta-impulse.py  shuffle_product.py  sympy_partial_fracs.py  terms_MATLAB.txt  terms_python.txt  vci_cube.py  vci_quad.py  vci_quad_cube.py  whole_analysis.py
profile_logs/: GSdeque7.txt  GSinheritnumpy7.txt  all_cached.txt  all_cached2.txt  all_cached3.txt  all_cachedfor9iters.txt  cachecollectediter7.txt  cachecollectediter8.txt  nshuffle_cache.txt  shuffle23.txt  shuffle3.txt  shuffle_post_cache2.txt  shuffle_profile_iter6.txt  shuffle_stack_profile_iter6.txt  shuffle_stack_profile_iter6_hash.txt  shuffle_stack_profile_iter7_hash.txt  shufflenonsymboliciter6.txt  tabulated7.txt
shuffleproduct/: __init__.py  auxilliary_funcs.py  delete.py  dirac_integral.m  generating.py  generating_series.py  genseries_backup.py  gs_inherit.py  impulse.py  params.py  (+21 more)
(+126 files in other folders)
