[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shuffleproduct"
version = "0.1.0"
description = "Shuffle product used to calculate the impulse response on nonlinear differential equations."
authors = [
    {name = "Tristan Gowdridge", email = "tristan.gowdridge@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/TristanGowdridge/ShuffleProduct"
